apps/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: default
  labels:
    app: sonarr
spec:
  selector:
    matchLabels:
      app: sonarr
  # replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: sonarr
      labels:
        app: sonarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/sonarr:latest
          ports:
            - containerPort: 8989
              name: sonarr
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: data
          hostPath:
            path: /home/ad/homelab/data
            type: Directory
        - name: config
          hostPath:
            path: /home/ad/homelab/config/sonarr/
            type: Directory
      restartPolicy: Always
---
