apps/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: default
spec:
  selector:
    app: sonarr
  ports:
    - name: sonarr
      port: 8989
      targetPort: 8989
